@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/NewStuff,v 1.80 2005/12/12 15:58:53 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/NewStuff,v 1.81 2006/02/08 16:10:46 ph10 Exp $
 
 New Features in Exim
 --------------------
@@ -20,13 +20,17 @@ PH/01 There is a new global option called disable_ipv6, which does exactly what
       data, etc. are also ignored. If IP literals are enabled, the ipliteral
       router declines to handle IPv6 literal addresses.
 
-PH/01 There are now 20 of each type of ACL variable by default (instead of 10).
+PH/02 There are now 20 of each type of ACL variable by default (instead of 10).
       It is also possible to change the numbers by setting ACL_CVARS and/or
       ACL_MVARS in Local/Makefile. Backward compatibility is maintained if you
       upgrade to this release with existing messages containing ACL variable
       settings on the queue. However, going in the other direction
       (downgrading) will not be compatible; the values of ACL variables will be
       lost.
+
+PH/03 If quota_warn_message contains a From: header, Exim now refrains from
+      adding the default one. Similarly, if it contains a Reply-To: header, the
+      errors_reply_to option, if set, is not used.
 
 
 Version 4.60
